fix: Sonar issues