@@ -79,8 +79,6 @@ import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.stereotype.Component;
 import org.springframework.transaction.annotation.Transactional;
 
-import com.google.common.collect.ImmutableList;
-
 @Component( "org.hisp.dhis.analytics.TeiAnalyticsTableManager" )
 public class JdbcTeiAnalyticsTableManager extends AbstractJdbcTableManager
 {
@@ -113,7 +111,7 @@ public class JdbcTeiAnalyticsTableManager extends AbstractJdbcTableManager
         this.trackedEntityTypeService = trackedEntityTypeService;
     }
 
-    private static final List<AnalyticsTableColumn> FIXED_COLS = ImmutableList.of(
+    private static final List<AnalyticsTableColumn> FIXED_COLS = List.of(
         new AnalyticsTableColumn( quote( "trackedentityinstanceid" ), INTEGER, NOT_NULL,
             "tei.trackedentityinstanceid" ),
         new AnalyticsTableColumn( quote( "trackedentityinstanceuid" ), CHARACTER_11, NOT_NULL, "tei.uid" ),
@@ -184,21 +182,23 @@ public class JdbcTeiAnalyticsTableManager extends AbstractJdbcTableManager
                             + teaUid + "')" ) )
                     .collect( Collectors.toList() ) );
 
+                StringBuilder sql = new StringBuilder();
+
                 columns.add(
                     new AnalyticsTableColumn(
                         quote( "enrollments" ), JSONB,
-                        "(select JSON_AGG(JSON_BUILD_OBJECT('programUid', p_0.uid,"
-                            + " 'programInstanceUid', pi_0.uid, 'enrollmentDate', pi_0.enrollmentdate,"
-                            + " 'incidentDate', pi_0.incidentdate,'endDate', pi_0.enddate, 'events', "
-                            + " (select JSON_AGG(JSON_BUILD_OBJECT('programStageUid', ps_0.uid,"
-                            + " 'programStageInstanceUid', psi_0.uid, 'executionDate', psi_0.executiondate,"
-                            + " 'dueDate', psi_0.duedate, 'eventDataValues', psi_0.eventdatavalues))"
-                            + " from programstageinstance psi_0, programstage ps_0"
-                            + " where psi_0.programinstanceid = pi_0.programinstanceid"
-                            + " and ps_0.programstageid = psi_0.programstageid)))"
-                            + " from programinstance pi_0, program p_0"
-                            + " where pi_0.trackedentityinstanceid = tei.trackedentityinstanceid"
-                            + " and p_0.programid = pi_0.programid)" ).withIndexType( GIN ) );
+                        sql.append( "(select JSON_AGG(JSON_BUILD_OBJECT('programUid', p_0.uid," )
+                            .append( " 'programInstanceUid', pi_0.uid, 'enrollmentDate', pi_0.enrollmentdate," )
+                            .append( " 'incidentDate', pi_0.incidentdate,'endDate', pi_0.enddate, 'events', " )
+                            .append( " (select JSON_AGG(JSON_BUILD_OBJECT('programStageUid', ps_0.uid," )
+                            .append( " 'programStageInstanceUid', psi_0.uid, 'executionDate', psi_0.executiondate," )
+                            .append( " 'dueDate', psi_0.duedate, 'eventDataValues', psi_0.eventdatavalues))" )
+                            .append( " from programstageinstance psi_0, programstage ps_0" )
+                            .append( " where psi_0.programinstanceid = pi_0.programinstanceid" )
+                            .append( " and ps_0.programstageid = psi_0.programstageid)))" )
+                            .append( " from programinstance pi_0, program p_0" )
+                            .append( " where pi_0.trackedentityinstanceid = tei.trackedentityinstanceid" )
+                            .append( " and p_0.programid = pi_0.programid)" ).toString() ).withIndexType( GIN ) );
 
                 return new AnalyticsTable( getAnalyticsTableType(), columns, newArrayList(), tet );
             } ).collect( Collectors.toList() );
@@ -279,7 +279,7 @@ public class JdbcTeiAnalyticsTableManager extends AbstractJdbcTableManager
 
         validateDimensionColumns( columns );
 
-        String sql = "insert into " + partition.getTempTableName() + " (";
+        StringBuilder sql = new StringBuilder( "insert into " + partition.getTempTableName() + " (" );
 
         for ( AnalyticsTableColumn col : ListUtils.union( columns, values ) )
         {
@@ -288,10 +288,10 @@ public class JdbcTeiAnalyticsTableManager extends AbstractJdbcTableManager
                 continue;
             }
 
-            sql += col.getName() + ",";
+            sql.append( col.getName() + "," );
         }
 
-        sql = TextUtils.removeLastComma( sql ) + ") select ";
+        TextUtils.removeLastComma( sql ).append( ") select " );
 
         for ( AnalyticsTableColumn col : columns )
         {
@@ -300,25 +300,25 @@ public class JdbcTeiAnalyticsTableManager extends AbstractJdbcTableManager
                 continue;
             }
 
-            sql += col.getAlias() + ",";
+            sql.append( col.getAlias() + "," );
         }
 
-        sql = TextUtils.removeLastComma( sql )
-            + " from trackedentityinstance tei"
-            + " left join programinstance pi on pi.trackedentityinstanceid = tei.trackedentityinstanceid"
-            + " left join program p on p.programid = pi.programid"
-            + " left join programstageinstance psi on psi.programinstanceid = pi.programinstanceid"
-            + " left join programstage ps on ps.programstageid = psi.programstageid"
-            + " left join organisationunit ou on tei.organisationunitid = ou.organisationunitid"
-            + " left join _orgunitstructure ous on ous.organisationunitid = ou.organisationunitid"
-            + " where tei.trackedentitytypeid = " + partition.getMasterTable().getTrackedEntityType().getId()
-            + " group by "
-            + FIXED_COLS.stream()
+        TextUtils.removeLastComma( sql )
+            .append( " from trackedentityinstance tei" )
+            .append( " left join programinstance pi on pi.trackedentityinstanceid = tei.trackedentityinstanceid" )
+            .append( " left join program p on p.programid = pi.programid" )
+            .append( " left join programstageinstance psi on psi.programinstanceid = pi.programinstanceid" )
+            .append( " left join programstage ps on ps.programstageid = psi.programstageid" )
+            .append( " left join organisationunit ou on tei.organisationunitid = ou.organisationunitid" )
+            .append( " left join _orgunitstructure ous on ous.organisationunitid = ou.organisationunitid" )
+            .append( " where tei.trackedentitytypeid = " + partition.getMasterTable().getTrackedEntityType().getId() )
+            .append( " group by " )
+            .append( FIXED_COLS.stream()
                 .map( AnalyticsTableColumn::getAlias )
                 .filter( alias -> !"enrollments".equals( alias ) )
-                .collect( Collectors.joining( "," ) );
+                .collect( Collectors.joining( "," ) ) );
 
-        invokeTimeAndLog( sql, partition.getTempTableName() );
+        invokeTimeAndLog( sql.toString(), partition.getTempTableName() );
     }
 
     /**
